# esp_hi_models

./: README.md
ESP-HI/: obj_3_obj_4_机器狗腿_20250425.STL.stl  obj_4_obj_4_机器狗腿_20250425.STL.stl  obj_5_obj_4_机器狗腿_20250425.STL.stl  obj_6_ESP-HI 屏幕固定治具.STL.stl  obj_8_obj_4_机器狗腿_20250425.STL.stl  obj_9_小盖.stl
ESP-Hi：ESP32-C3/: ESP-HI 屏幕固定治具.STL  Microphone noise reduction & LED bezel.STL  Robot Dog PCB Cover_20250519.STL  机器狗腿_20250425.STL
esp-hi-master/: README.md
esp-hi-master/components/esp_hi/: CMakeLists.txt  Kconfig  README.md  esp_hi.c  idf_component.yml
esp-hi-master/components/espressif__adc_mic/: .component_hash  CMakeLists.txt  adc_mic.c  idf_component.yml
esp-hi-master/components/servo_dog_ctrl/: CHANGELOG.md  Kconfig  README.md  idf_component.yml  servo_dog_ctrl.c
esp-hi-master/example/: README.md
esp-hi-master/example/audio_loop_test/: README.md  README_CN.md  partitions.csv
esp-hi-master/example/audio_loop_test/main/: CMakeLists.txt  main.c  (+1 more)
esp-hi-master/example/lcd_audio/: CMakeLists.txt  README.md  README_CN.md  partitions.csv  sdkconfig.defaults
esp-hi-master/example/lcd_audio/main/: CMakeLists.txt  main.c  mmap_generate_audio.h
esp-hi-master/example/music_player/: CMakeLists.txt  README.md  README_CN.md  partitions.csv  sdkconfig.defaults
esp-hi-master/example/sensor_test/: CMakeLists.txt  README.md
esp-hi-master/example/sensor_test/components/BSEC2/: CMakeLists.txt
esp-hi-master/example/servo_dog/: README_CN.md
esp-hi-master/example/wake_word_test/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp-hi-master/example/wake_word_test/main/: CMakeLists.txt  idf_component.yml  main.cpp  mmap_generate_gif.h
esp-hi-master/example/web_control/: README_CN.md  sdkconfig.defaults
(+28 files in other folders)
